# TestĿ¼

FILE(GLOB_RECURSE src_test *.cpp *.h)
SET(TEST_SCRS ${src_test})

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/AsNet
	${PROJECT_SOURCE_DIR}/third_party/include)

SET(THIRD_PARTY_LIB_DIR ${PROJECT_SOURCE_DIR}/third_party/lib)

LINK_DIRECTORIES(
    ${THIRD_PARTY_LIB_DIR}/lib32-msvc-11.0
    ${THIRD_PARTY_LIB_DIR}/lib32-pb
	${THIRD_PARTY_LIB_DIR}/lib/lib32-rpb
	${PROJECT_BINARY_DIR}/Lib})
	
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Bin)
ADD_EXECUTABLE(Test ${TEST_SCRS})
	
SET(EXTRA_LIBS libprotobuf Asnet)
TARGET_LINK_LIBRARIES(Test ${EXTRA_LIBS})
